1. Collection API Улучшения[#230911]