@@ -12,7 +12,7 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Mikhail Pushkarev", "ed000mnm"),
                 new Account("142", "Mikhail Pushkarev", "00000001")
         );
@@ -27,13 +27,13 @@ public class NotifyAccountTest {
 
     @Test
     public void sentDelete() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("12345", "Mikhail Pushkarev", "002"),
                 new Account("12345", "Mikhail Pushkarev", "002"),
                 new Account("123", "Mikhail Pushkarev", "023")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("12345", "Mikhail Pushkarev", "002"),
                         new Account("123", "Mikhail Pushkarev", "023")
                 )
